# marco-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_OPTIMIZATION_REVIEW.md  README.md  SECURITY.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: crossplatform.instructions.md  marco-core.instructions.md  rust.instructions.md
.github/workflows/: ci-linux.yml  ci-perf.yml  ci-windows.yml  devskim.yml  preflight-crate.yml  publish-crate.yml  update-crate.yml
Documentation/: API Naming Standard.md  COMPARISON_RAW_vs_FULL_FEATURED.md  DEVELOPMENT.md  TESTING.md  TOOLS.md  testing.md  tools.md
benches/: core_benchmarks.rs
src/: lib.rs
src/grammar/: mod.rs  shared.rs
src/grammar/blocks/: cm_blockquote.rs  cm_fenced_code_block.rs  cm_heading.rs  cm_html_blocks.rs  cm_indented_code_block.rs  cm_link_reference.rs  cm_list.rs  cm_paragraph.rs  cm_setext_heading.rs  cm_thematic_break.rs  gfm_table.rs  marco_headerless_table.rs  marco_sliders.rs  marco_tab_blocks.rs  mod.rs
src/grammar/inlines/: bracket_match.rs  cm_autolink.rs  cm_backslash_escape.rs  cm_code_span.rs  cm_emphasis.rs  cm_image.rs  cm_inline_html.rs  cm_line_breaks.rs  cm_link.rs  cm_strong.rs  cm_strong_emphasis.rs  gfm_strikethrough.rs  marco_dash_strikethrough.rs  marco_mark.rs  marco_subscript.rs  marco_subscript_arrow.rs  marco_superscript.rs  math_display.rs  math_inline.rs  mod.rs
src/intelligence/: catalog.rs  diagnostics_catalog_marco.ron  diagnostics_catalog_markdownlint.ron  lsp_protocol.rs  mod.rs  toc.rs
src/intelligence/analysis/: diagnostics.rs  lint.rs  mod.rs
src/intelligence/editor/: completion.rs  highlight.rs  hover.rs  mod.rs
src/intelligence/markdown/: ast.rs  blocks.rs  inlines.rs  mod.rs
src/logic/: cache.rs  logger.rs  mod.rs  text_completion.rs  utf8.rs
src/parser/: ast.rs  mod.rs  position.rs  shared.rs
src/parser/blocks/: cm_blockquote_parser.rs  cm_fenced_code_block_parser.rs  cm_heading_parser.rs  cm_html_blocks_parser.rs  cm_indented_code_block_parser.rs  cm_link_reference_parser.rs  cm_list_parser.rs  cm_paragraph_parser.rs  cm_thematic_break_parser.rs  gfm_admonitions.rs  gfm_footnote_definition_parser.rs  gfm_table_parser.rs  marco_headerless_table_parser.rs  marco_sliders_parser.rs  marco_tab_blocks_parser.rs  mod.rs  parallel_inline.rs  shared.rs
src/parser/inlines/: cm_autolink_parser.rs  cm_backslash_escape_parser.rs  cm_code_span_parser.rs  cm_emphasis_parser.rs  cm_entity_reference_parser.rs  cm_image_parser.rs  cm_inline_html_parser.rs  cm_line_breaks_parser.rs  cm_link_parser.rs  cm_reference_link_parser.rs  cm_strong_emphasis_parser.rs  cm_strong_parser.rs  emphasis.rs  gfm_autolink_literal_parser.rs  gfm_footnote_reference_parser.rs  gfm_strikethrough_parser.rs  marco_dash_strikethrough_parser.rs  marco_emoji_shortcode_parser.rs  marco_inline_footnote_parser.rs  marco_mark_parser.rs  marco_platform_mentions_parser.rs  marco_subscript_arrow_parser.rs  marco_subscript_parser.rs  marco_superscript_parser.rs  marco_task_checkbox_inline_parser.rs  math_display_parser.rs  math_inline_parser.rs  mod.rs  shared.rs  text_parser.rs
src/render/: base_css.rs  code_languages.rs  diagram.rs  markdown.rs  math.rs  mod.rs  options.rs  plarform_mentions.rs  preview_document.rs  syntect_highlighter.rs  theme_meta.rs
tests/: README.md  autolink_highlighting.rs  autolink_highlighting_it.rs  commonmark_features_integration.rs  commonmark_features_it.rs  commonmark_spec_conformance.rs  commonmark_spec_it.rs  definition_lists_it.rs  extended_heading_ids_integration.rs  gfm_admonitions_it.rs  gfm_autolink_literals_integration.rs  gfm_autolinks_it.rs  gfm_footnotes_integration.rs  gfm_footnotes_it.rs  gfm_tables_it.rs  gfm_tasklist_integration.rs  gfm_tasklist_it.rs  heading_anchor_links_integration.rs  heading_anchor_links_it.rs  heading_ids_it.rs  highlighting_integration.rs  highlighting_it.rs  html_autolink_integration.rs  html_autolink_it.rs  html_block_single_line_integration.rs  html_block_single_line_it.rs  intelligence_provider_integration.rs  intelligence_provider_it.rs  marco_emoji_shortcode_integration.rs  marco_headerless_table_integration.rs  marco_inline_footnotes_integration.rs  marco_inline_footnotes_it.rs  marco_sliders_integration.rs  marco_sliders_it.rs  marco_tab_blocks_integration.rs  marco_tab_blocks_it.rs  parallel_parse_it.rs  parser_cache_integration.rs  parser_cache_it.rs  platform_mentions_integration.rs  (+3 more)
tests/spec/: README.md  extra.json
tools/: README.md
tools/marco-ast/: Cargo.toml  README.md
tools/marco-ast/src/: ast_print.rs  cli.rs  input.rs  interactive.rs  logging.rs  main.rs  output.rs
tools/marco-ast/tests/: cli_it.rs
tools/perf-lab/: Cargo.toml  README.md  perf-lab.ron
tools/perf-lab/benches/: marco_core_modes.rs
tools/perf-lab/fixtures/large/: code-heavy.md  generated-synthetic.md  paragraph-heavy.md
tools/perf-lab/fixtures/medium/: generated-synthetic.md
tools/perf-lab/fixtures/pathological/: generated-synthetic.md  star-pyramid.md  unbalanced-brackets.md
tools/perf-lab/fixtures/small/: generated-synthetic.md
tools/perf-lab/output/: .gitignore
tools/perf-lab/output/baseline/: workload-manifest-v1.json
tools/perf-lab/output/summary/: COMPARISON_RAW_vs_FULL_FEATURED.md
tools/perf-lab/scripts/: run-bench.sh  run-compare.sh  run-hyperfine.sh  run-parallel-compare.sh  run-regression.sh  run-stress.sh
tools/perf-lab/src/: cli.rs  config.rs  main.rs  workloads.rs
tools/perf-lab/src/adapters/: comrak.rs  marco_core.rs  markdown_it.rs  markdown_rs.rs  mod.rs  pulldown_cmark.rs
tools/perf-lab/src/report/: csv.rs  json.rs  markdown.rs  mod.rs
tools/perf-lab/src/runners/: benchmark.rs  compare.rs  mod.rs  regression.rs  report_cmd.rs  stress.rs
tools/spec/: README.md  combos.json  commonmark.json  diagram.json  gfm.json  marco.json  math.json
tools/tests/: README.md  extension_spec_it.rs
