[package]
name = "marco-ast"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "marco-ast"
path = "src/main.rs"

[dependencies]
marco-core = { path = "../.." }
clap = { version = "4", features = ["derive", "color"] }
rustyline = "18"
crossterm = "0.29"
atty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
