[package]
name = "perf-lab"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.94.1"

[[bin]]
name = "perf-lab"
path = "src/main.rs"

[dependencies]
marco-core = { path = "../.." }
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.13"
comrak = { version = "0.54", default-features = false }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "marco_core_modes"
harness = false
